2011-01-25  vadim  <vadim@netcitadel.com>

	* FWObject.cpp (updateNonStandardObjectReferences): see #1985
	added virtual function updateNonStandardObjectReferences() that is
	supposed to update any references to objects stored as attributes.

	* ACL.cpp (trimLine): fixes #1986 "Cisco ASA remarks should be
	truncated to 100 characters or less". Trimming all lines used for
	access list remarks to <100 characters. Remarks can only be less
	than 101 characters on PIX/ASA and less than 100 characters on
	IOS.

2011-01-24  Vadim Kurland  <vadim@netcitadel.com>

	* PolicyCompiler.cpp (addMgmtRule): fixes #1966 "IOSACL:
	object-group can get name that consists of only suffix".  Compiler
	generated object-group statements with names such as ".src.net.0"
	in some cases.

	* ObjectIconView.cpp (dragEnterEvent): see #1980 "Objects from
	Deleted Objects should not be allowed to be used in rules". Added
	checks to not allow drag&drop of an object from Deleted Objects
	library into rules and groups.

	* NamedObject.cpp (createServiceObjectCommand): See #1958
	"consistently use "exit" to get out of nested context in pix
	config". Using "exit" to exit from nested context while adding
	network or service object in generated PIX/ASA configuraton.

	* PolicyCompiler_pix.cpp (compile): see #1970 "ASA Policy - single
	IPv6 icmp object allowed in rules". Since we do not support ipv6
	for PIX/ASA at this time, policy compiler should drop the rule
	if ipv6 address or icmpv6 service is used and issue a warning.

	* PolicyCompiler_pix_v6_acls.cpp (processNext): see #1981 "ASA /
	FWSM Policy - Generate warning message if rule will not generate
	config data"

2011-01-22  vadim  <vadim@netcitadel.com>

	* ObjectManipulator.cpp (contextMenuRequested): context menu item
	that opens object in the editor should be named "Inspect" when the
	object is read-only because the editor would not allow the user to
	change it.

	* ObjectManipulator.cpp (contextMenuRequested): fixed #1926